k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
      kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - ajay404.online
    secretName: healy-tls
  rules:
  - host: ajay404.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-srv
            port:
              number: 80
